add /api route and auth it.
